# ml1m-gSASRec

./: .gitignore  .pre-commit-config.yaml  README.md  datasets.dvc  models.dvc  pyproject.toml
.dvc/: .gitignore  config
configs/: config.local  model.yaml  preprocess.yaml
gsasrec/: dataset_utils.py  eval_utils.py  gsasrec.py  lightning_module.py  mlflow_inference.py  transformer_decoder.py  utils.py
scripts/: convert_to_onnx.py  evaluate_gsasrec.py  mlflow_register.py  preprocess_ml1m.py  train_gsasrec.py
